# Mythline

./: .env.example  .evn.example  .gitignore  CLAUDE.md  README.md  REFACTORING_PLAN.md  cc.bat  docker-compose.yml  generate_shots.bat  manage_knowledge_base.bat  rebuild_output.txt  report.txt  requirements.txt  script.md  start_all_mcps.bat  start_audio_generator.bat  start_cli.bat  start_directing.bat  start_filesystem_mcp.bat  start_knowledge_base_server.bat  start_llm_tester.bat  start_shot_creator.bat  start_story_creator.bat  start_story_creator_agent.bat  start_story_researcher.bat  start_voice_navigator.bat  start_web_crawler_mcp.bat  start_web_search_mcp.bat  start_web_ui.bat  start_youtube_upload.bat
.apex/epic-owner/: memory.json
.apex/product-owner/: memory.json
.claude/: settings.local.json
.claude/research/: agentic-content-summarization.md  autonomous-agent-daemon-processes.md  crawl4ai-fandom-anti-bot.md  crawl4ai-mcp-server.md  docker-mcp-integration.md  embedding-provider-strategy.md  message-queue-for-drama-agents.md  pydantic-ai-state-of-framework-2026.md  surrealdb-poc-research.md  vector-db-knowledge-storage-research.md  wlr-westfall-analysis.md  wow-systems-for-roleplay-storytelling.md
PDs/: pydantic_ai_coding_guide.md  pydantic_ai_project_structure.md  pydantic_ai_prompt_guide.md
PDs/blueprints/: ENVIRONMENT.md  PROJECT_STRUCTURE.md  ROOT_STRUCTURE.md
a_world_lore_researcher/: .env.example  Dockerfile  conftest.py  pyproject.toml
a_world_lore_researcher/config/: mcp_config.json  research_topics.yml  sources.yml
a_world_lore_researcher/prompts/: cross_reference.md  cross_reference_task.md  discover_zones.md  discover_zones_system.md  extract_factions.md  extract_lore.md  extract_narrative_items.md  extract_npcs.md  extract_zone.md  extract_zone_data.md  orchestrator_system.md  orchestrator_task.md  research_zone.md  system_prompt.md
a_world_lore_researcher/scripts/: e2e_smoke.py
a_world_lore_researcher/src/: agent.py  checkpoint.py  config.py  daemon.py  logging_config.py  mcp_client.py  models.py  orchestrator_tools.py  pipeline.py  tools.py
a_world_lore_researcher/tests/: factories.py  test_agent.py  test_checkpoint.py  test_config.py  test_daemon.py  test_integration.py  test_logging_config.py  test_mcp_client.py  test_models.py  test_orchestrator_tools.py  test_pipeline.py  test_shared.py  test_tools.py
docs/: design_audio_generator.md  design_shot_creator.md  design_story_creator.md  design_web_interface.md  design_wow_themed_ui.md  mythline-overview-presentation.md
docs/blueprints/: GETTING_STARTED.md  INDEX.md
docs/changelog/: CHANGELOG.md
docs/guides/: character_guide.md  wow_lore.md
docs/mythline-presentation/: index.html
docs/plans/: deterministic-director.md  dialogue_naturalism_guidelines.md  (+16 more)
guides/: character_guide.md  story_creation_guide.md
mcp_embedding/: .env.example  Dockerfile  pyproject.toml
mcp_embedding/src/: server.py
mcp_embedding/tests/: test_server.py
mcp_storage/: .env.example  Dockerfile  conftest.py  pyproject.toml
mcp_storage/src/: db.py  embedding.py  schema.py  server.py
mcp_storage/tests/: test_server.py
mcp_summarizer/: .env.example  Dockerfile  conftest.py  pyproject.toml
mcp_summarizer/prompts/: merge_summaries.md  summarize_chunk.md  summarize_chunk_extraction.md
mcp_summarizer/src/: chunker.py  config.py  logging_config.py  server.py  summarizer.py  tokens.py
mcp_summarizer/tests/: test_chunker.py  test_config.py  test_logging_config.py  test_server.py  test_summarizer.py  test_tokens.py
mcp_web_crawler/: .env.example  Dockerfile  pyproject.toml
mcp_web_crawler/src/: server.py
mcp_web_crawler/tests/: test_server.py
mcp_web_search/: .env.example  Dockerfile  pyproject.toml
mcp_web_search/src/: server.py
mcp_web_search/tests/: test_server.py
output/: research_note.md  story-1.md  story.md
s_wiki_crawler/: .env.example  Dockerfile  pyproject.toml
s_wiki_crawler/config/: crawl_scope.yml  sources.yml
s_wiki_crawler/scripts/: e2e_smoke.py
s_wiki_crawler/src/: config.py  crawler.py  daemon.py  logging_config.py  models.py  storage.py
s_wiki_crawler/tests/: conftest.py  test_config.py  test_crawler.py  test_daemon.py  test_models.py  test_storage.py
shared/: __init__.py  config_loader.py  crawl.py  embedding.py  prompt_loader.py
(+330 files in other folders)
