[project]
name = "a-world-lore-researcher"
version = "0.1.0"
description = "Autonomous World Lore Researcher agent for Mythline"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.1.0",
    "pydantic>=2.0.0",
    "aio-pika>=9.0.0",
    "tenacity>=9.0.0",
    "aiolimiter>=1.2.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
