[project]
name = "mcp-summarizer"
version = "0.1.0"
description = "Content summarization MCP service — map-reduce chunking with domain-aware LLM compression"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "uvicorn>=0.34.0",
    "openai>=1.60.0",
    "tiktoken>=0.9.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
