[project]
name = "mcp-web-crawler"
version = "0.1.0"
description = "Web Crawler MCP service for Mythline - URL content extraction to markdown"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
